--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,11 @@
 body {
     @apply text-text-100 bg-white;
 }
+
+.header-bg::after {
+    content: "";
+    /* TODO: Replace the placeholder image with an actual image*/
+    background: linear-gradient(0deg, rgba(34,34,34,0.3) 0%, rgba(34,34,34,0.8) 100%), url("https://placehold.co/428x500") ;
+    height: 100%;
+    @apply absolute inset-x-0 top-0 -z-10 bg-cover bg-center bg-no-repeat;
+}
