--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,13 +13,7 @@ body {
 
 .header-bg::after {
     content: "";
-    background: linear-gradient(0deg, rgba(34,34,34,0.3) 0%, rgba(34,34,34,0.8) 100%), url("/header-background-mobile.jpg");
+    background: linear-gradient(0deg, rgba(34,34,34,0.3) 0%, rgba(34,34,34,0.8) 100%), url("/header-background.jpg") no-repeat;
     height: 100%;
-    @apply absolute inset-x-0 top-0 -z-10 bg-cover bg-center bg-no-repeat;
-}
-
-@media screen and (min-width: 1024px) {
-    .header-bg::after {
-        background: linear-gradient(0deg, rgba(34,34,34,0.3) 0%, rgba(34,34,34,0.8) 100%), url("/header-background.png");
-    }
+    @apply absolute inset-x-0 top-0 -z-10 bg-cover bg-center;
 }
