--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,7 +14,7 @@ body {
   @apply text-text-100 bg-white;
 }
 
-body:has(aside[data-isActive="true"]) {
+body:has(aside[data-is-active="true"]) {
   @apply overflow-hidden;
 }
 
