Refactor the home page layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,7 @@ body:has(aside[data-is-active="true"]) {
       rgba(34, 34, 34, 0.3) 0%,
       rgba(34, 34, 34, 0.8) 100%
     ),
-    url("/header-background.jpg") no-repeat;
+    url("../assets/images/hero-background.jpg") no-repeat;
   height: 100%;
   @apply absolute inset-x-0 top-0 -z-10 bg-cover bg-center;
 }
